# advent_of_code

./: README.md
2023/: .gitignore  README.md  build.sbt
2023/src/main/scala/: Main.scala
2023/src/test/scala/: Day01_Tests.scala  Day02_Tests.scala  Day03_Tests.scala  Day04_Tests.scala  Day05_Tests.scala  Day06_Tests.scala  Day07_Tests.scala  Day08_Tests.scala  Day09_Tests.scala  (+10 more)
2024/: .gitignore  pyproject.toml  test
2024/day0/: day0.py  day0_test.py  solve_test.py
2024/day01/: day1.py  solve.py
2024/day02/: day2_test.py  solve.py  solve_test.py
2024/day03/: day3_test.py  solve.py  solve_test.py
2024/day04/: day4.py  day4_test.py  solve.py  solve_test.py
2024/day05/: day5.py  day5_test.py  solve_test.py
2024/day06/: day6.py  day6_test.py  solve.py  solve_test.py
2024/day07/: day7.py  day7_test.py  solve_test.py
2024/day08/: day8.py  day8_test.py  solve_test.py
2024/day09/: day9.py  day9_test.py  solve_test.py
2024/day1/: day1.py
2024/day10/: day10.py  day10_test.py  solve.py  solve_test.py
2024/day11/: day11.py  day11_test.py  solve_test.py
2024/day12/: day12.py  day12_test.py  solve.py  solve_test.py
2024/day13/: day13.py  day13_test.py  solve.py  solve_test.py
2024/day14/: day14.py  day14_test.py  solve.py  solve_test.py
2024/day15/: day15.py  day15_test.py  solve.py  solve_test.py
2024/day16/: solve.py  solve_test.py
2024/day2/: day2.py
2024/day3/: day3.py
2024/day4/: day4.py  day4_test.py
2024/day5/: day5.py
2024/day6/: day6_test.py
2024/day8/: day8.py  day8_test.py
2024/day9/: day9.py
2025/: README.md
(+47 files in other folders)
