[project]
name = "2024"
version = "0.1.0"
description = ""
authors = [
    {name = "Zack Golden",email = "ZackGolden@pm.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff (>=0.12.7,<0.13.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
